# employee

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/: json.hpp
model/: Person.h  Worker.cpp  Worker.h
parser/: JsonParser.h
storage/: Storage.cpp  Storage.h
utils/: Function.h  JsonParamFeatures.h
